Draft for bug 760529 - [nl] Translate Whats New page for Firefox 13 + video
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105708 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/nl/videos/video_fx13.lang
+++ b/nl/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Wat is nieuw in Firefox] Met de nieuwste Firefox bent u nu nog makkelijker en sneller waar u wilt zijn.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Met de vernieuwde Startpagina kunt u nu eenvoudig uw meest gebruikte menuopties benaderen.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Zoals downloads, bladwijzers, geschiedenis, add-ons, Sync en instellingen.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Nieuwe tabbladpagina] We hebben ook verbeteringen aan uw nieuwe tabbladpagina aangebracht.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Met de nieuwe tabbladpagina kunt u nu eenvoudig naar uw meest recent en regelmatig bezochte websites navigeren via één klik.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Om de nieuwe tabbladpagina te gebruiken maakt u een nieuw tabblad aan door op de ‘+’ boven in uw browser te klikken.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+De nieuwe tabbladpagina zal nu miniaturen van uw meest recent en regelmatig bezochte websites uit de geschiedenis van uw locatiebalk weergeven.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+U kunt uw nieuwe tabbladpagina aanpassen door de miniaturen te verslepen en de volgorde te wijzigen.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Klik op de punaise om de website vast te zetten, of op de knop ‘X’ om een website te verwijderen.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+U kunt ook op het ‘rasterpictogram’ rechtsboven in de pagina klikken om terug te gaan naar de lege nieuwe tabbladpagina.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Download de nieuwste Firefox nu en gebruik de nieuwe functies vandaag nog!
