--- a/nl/whatsnew.lang
+++ b/nl/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hoera! Uw Firefox is up-to-date.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Uw Firefox is verouderd.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Om veiligheidsredenen raden we aan naar de <a href="{url}">nieuwste en beste versie</a> te upgraden.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+U gebruikt een onbekende versie van Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Om veiligheidsredenen raden we aan de <a href="{url}">nieuwste en beste versie</a> te downloaden.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Ga sneller dan ooit<br/>naar uw volgende taak
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Bekijk hoe de nieuwe functies in Firefox u sneller en efficiënter laten browsen.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Lees meer over <a href="{url}">de functie Nieuw tabblad »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Lees meer over onze <a href="{url}">vernieuwde startpagina »</a>
 
 
 ;Keep in touch
-Keep in touch
+Blijf in contact
 
 
 ;Keep it moving
-Keep it moving
+Blijf in beweging
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Download Firefox » <b>voor Android</b>
 
 
 ;Keep it going
-Keep it going
+Vertel het door
 
 
 ;Join Mozilla
-Join Mozilla
+Help Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+De Android Robot is voortgekomen uit werk dat wordt gemaakt en <a href="%s">gedeeld door Google</a> en wordt gebruikt volgens de voorwaarden die zijn beschreven in de <a href="%s">Creative Commons 3.0 Attribution License</a>.
 
 
