--- a/et/videos/video_fx13.lang
+++ b/et/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Firefoxi uuendused] Uusima Firefoxiga jõuad lihtsamini ja kiiremini, kuhu iganes minna soovid.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Värskendatud kujundusega avalehelt pääsed nüüd kergesti sagedamini kasutatud menüüvalikute juurde.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Allalaadimised, järjehoidjad, ajalugu, lisad, Sync ja sätted.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Uue kaardi leht] Täiustasime ka uue kaardi lehte.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Uuendatud uue kaardi lehel saad nüüd hõlpsasti liikuda hiljutistele ning sageli külastatud veebilehtedele.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Uue kaardi lehe kasutamiseks klõpsa brauseri ülaosas asuvat "+"-nuppu ning loo uus kaart.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Uue kaardi leht kuvab nüüd hiljutiste ning sageli külastatud veebilehtede pisipilte Awesome Bar'i ajaloost.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Võid uue kaardi lehte kohandada, lohistades pisipilte soovitud kohtadele.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Lehekülje kinnitamiseks praegusele kohale klõpsa knopkal, lehe eemaldamiseks aga "X"-nupule.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Samuti võid klõpsata ruudustikul lehe paremas ülanurgas, kui soovid naasta tühja uue kaardi lehe kasutamise juurde.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Hangi kohe uusim Firefox ning alusta nende võimaluste kasutamist juba täna!
