--- a/es-ES/whatsnew.lang
+++ b/es-ES/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+¡Bien! Tu Firefox está actualizado.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Tu Firefox no está actualizado.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Por razones de seguridad te recomendamos que lo actualices a la <a href="{url}">última y mejor versión</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Estás ejecutando una versión desconocida de Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Por razones de seguridad te recomendamos que descargues la <a href="{url}">última y mejor versión</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Llega a tu siguiente tarea<br/>más rápido que nunca
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Mira cómo las nuevas características de Firefox te ayudan a navegar de una forma más rápida y eficiente.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Descubre más sobre <a href="{url}">la función Nueva pestaña »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Descubre más sobre el <a href="{url}">rediseño de nuestra página de inicio »</a>
 
 
 ;Keep in touch
-Keep in touch
+Sigue actualizado
 
 
 ;Keep it moving
-Keep it moving
+Sigue moviéndote
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Consigue Firefox » <b>para Android</b>
 
 
 ;Keep it going
-Keep it going
+¡Síguenos!
 
 
 ;Join Mozilla
-Join Mozilla
+Únete a Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Android Robot es una reproducción de la obra creada y <a href="%s">compartida por Google</a> y se usa de acuerdo a los términos que se describen en la <a href="%s">licencia Reconocimiento de Creative Commons 3.0</a>.
 
 
