[es-ES] l10n of whatsnew.lang (a few corrections).
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105712 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/whatsnew.lang
+++ b/es-ES/whatsnew.lang
@@ -46,7 +46,7 @@ Sigue moviéndote
 
 
 ;Get Firefox » <b>for Android</b>
-Consigue Firefox » <b>para Android</b>
+Conseguir Firefox » <b>para Android</b>
 
 
 ;Keep it going
