--- a/es-ES/whatsnew.lang
+++ b/es-ES/whatsnew.lang
@@ -46,7 +46,7 @@ Sigue moviéndote
 
 
 ;Get Firefox » <b>for Android</b>
-Conseguir Firefox » <b>para Android</b>
+Obtener Firefox » <b>para Android</b>
 
 
 ;Keep it going
