Bug 760537 - [ru] Translate Whats New page for Firefox 13 + vido
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105716 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ru/videos/video_fx13.lang
+++ b/ru/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Что нового в Firefox] Вы можете гораздо легче и быстрее попасть туда, куда хотите, используя последнюю версию Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Используя обновлённую Домашнюю страницу, вы можете легко получить доступ к наиболее часто используемым пунктам меню.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Таким как загрузки, закладки, журнал, дополнения, синхронизация и настройки.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Страница Новая Вкладка] Мы также улучшили вашу страницу Новой Вкладки.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Используя страницу Новой Вкладки, вы можете с легкостью переходить к недавно открытым и чаще всего посещаемым вами сайтам.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Чтобы начать использовать страницу Новой Вкладки, создайте новую вкладку, щёлкнув по значку '+' в верхней части вашего браузера.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+На странице Новой Вкладки отобразятся миниатюры недавно открытых и чаще всего посещаемых вами веб-сайтов из истории вашей Умной Строки Адреса.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Вы можете настроить страницу Новой Вкладки, перетаскивая миниатюры для выстраивания в нужном порядке.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Щёлкните по канцелярской кнопке, чтобы закрепить сайт на месте, или по кнопке 'X', чтобы удалить сайт.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Вы можете также щёлкнуть по значку 'сетки' в верхнем правом углу страницы, чтобы вернуться к пустой странице Новой Вкладки.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Загрузите новейший Firefox и начните использовать эти новинки прямо сейчас!
