--- a/ru/whatsnew.lang
+++ b/ru/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Ура! У вас стоит последняя версия Firefox.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Ваш Firefox устарел.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+В целях безопасности, мы рекомендуем обновиться на <a href="{url}">самую последнюю и лучшую версию</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Вы используете неизвестную версию Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+В целях безопасности, мы рекомендуем загрузить <a href="{url}">самую последнюю и лучшую версию</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Переход от одной задачи к другой<br/>стал быстрее, чем когда-либо
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Посмотрите, как новые возможности Firefox помогают повысить скорость и эффективность работы.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Узнайте больше о <a href="{url}">возможностях Новой Вкладки »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Узнайте больше о нашей <a href="{url}">обновлённой домашней странице »</a>
 
 
 ;Keep in touch
-Keep in touch
+Оставайтесь на связи
 
 
 ;Keep it moving
-Keep it moving
+Будьте мобильным
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Загрузить Firefox » <b>для Android</b>
 
 
 ;Keep it going
-Keep it going
+Следите за новостями
 
 
 ;Join Mozilla
-Join Mozilla
+Присоединиться к Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Робот Android был воспроизведён с работы, созданной и <a href="%s">предоставленной для использования компанией Google</a>, и используется в соответствии с условиями, описанными в <a href="%s">лицензии Creative Commons 3.0 Атрибуция</a>.
 
 
