--- a/et/whatsnew.lang
+++ b/et/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hurraa! Sinu Firefox on ajakohane.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Sinu Firefox on aegunud.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Soovitame turvakaalutlustel tungivalt uuendamist <a href="{url}">viimasele versioonile</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Kasutad tundmatut Firefoxi versiooni.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Soovitame turvakaalutlustel tungivalt <a href="{url}">uusima versiooni</a> allalaadimist.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Asu järgmise ülesande kallale<br/>kiiremini kui kunagi varem
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Vaata, kuidas uued Firefoxi võimalused aitavad kiiremini ja tõhusamalt veebi sirvida.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Rohkem teavet <a href="{url}">uue kaardi lehest »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Rohkem teavet <a href="{url}">värskendatud kujundusega avalehest »</a>
 
 
 ;Keep in touch
-Keep in touch
+Ole ühenduses
 
 
 ;Keep it moving
-Keep it moving
+Ole mobiilne
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Firefoxi hankimine » <b>Androidile</b>
 
 
 ;Keep it going
-Keep it going
+Ole aktiivne
 
 
 ;Join Mozilla
-Join Mozilla
+Liitu Mozillaga
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Androidi robot on reprodutseeritud Google'i poolt loodud ja <a href="%s">jagatud</a> teose põhjal ning seda on kasutatud <a href="%s">Creative Commons'i autorile viitamise litsentsi (versioon 3.0)</a> tingimustel.
 
 
