--- a/ru/snippets.lang
+++ b/ru/snippets.lang
@@ -126,7 +126,7 @@ Firefox для Android теперь оптимизирован для работ
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Новые возможности Firefox делают переход от одной задачи к другой ещё быстрее! <a href="%">Чтобы узнать больше, посмотрите видео.</a>
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
