--- a/is/snippets.lang
+++ b/is/snippets.lang
@@ -122,10 +122,9 @@ Ertu að nota Firefox á mörgum tölvum? Núna geturðu samstillt viðbæturnar
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Hraði, hraði, hraði. <a %s>Firefox fyrir Android var að fá stóra uppfærslu</a>. Hjálpaðu okkur með því að láta aðra vita.
+Hraði, hraði, hraði. <a %s>Firefox fyrir Android var að fá stóra uppfærslu</a>. Hjálpaðu til með því að láta aðra vita.
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-
+Firefox er með nýja hluti sem hjálpa þér að klára þín verkefni hraðar! <a href="%">Athugaðu myndbandið til að fræðast meira.</a>
 
