localization whatsnew page and others
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105724 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-AR/newsletter.lang
+++ b/es-AR/newsletter.lang
@@ -182,14 +182,13 @@ Mozilla Newsletters
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+¡Gracias! Mirá tu bandeja de entrada para confirmar tu suscripción.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Recibirás un mensaje de correo de mozilla@e.mozilla.org para confirmar tu suscripción. Si no lo ves, mirá en el filtro de spam. Tenés que confirmar tu suscripción para recibir nuestro boletín.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-
+Asegurate de agregar nuestra dirección de correo mozilla@e.mozilla.org a tu libreta de contactos para asegurarte que lleguemos a tu bandeja de entrada.
 
