--- a/es-AR/snippets.lang
+++ b/es-AR/snippets.lang
@@ -126,6 +126,6 @@ Rápido, rápido, rápido. <a %s>Firefox para Android acaba de tener una gran ac
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+¡Firefox tiene nuevas fucionalidades para que realices tus tareas más rápido que nunca! <a href="%">Mirá el video para conocer más.</a>
 
 
