--- a/es-AR/videos/video_fx13.lang
+++ b/es-AR/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Qué hay de nuevo en Firefox] Ahora es más fácil y rápido que llegues adonde querés ir con el último Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Con el rediseño de la página de inicio podés acceder y navegar fácilmente por las opciones del menú que usás comunmente.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Como descargas, marcadores, historial, complementos, sync y configuración.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Página Nueva pestaña] También mejoramos la página Nueva pestaña.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Con la página Nueva pestaña, podrás navegar fácilmente a los sitios que visitás más frecuentemente con un solo clic.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Para empezar a usar la página Nueva pestaña, crea una nueva pestaña con un clic en el '+' en la parte superior de tu navegador.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+La página Nueva pestaña mostrará miniaturas de los sitios web que frecuentás o que visitaste últimamente basado en el historial de tu Barra asombrosa.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Podés modificar la página Nueva pestaña si arrastrás las miniaturas para cambiar el orden.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Podés hacer clic en la chinche para fijar el sitio en el lugar, o el botón 'X' para borrar el sitio.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+También podés hacer clic en el ícono de grilla que está en la parte superior derecha de la página para volver a tener la página en blanco para la página de Nueva pestaña.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+¡Descargá el nuevo Firefox y empezá a usar estas funciones ya mismo!
