--- a/es-AR/whatsnew.lang
+++ b/es-AR/whatsnew.lang
@@ -2,51 +2,51 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+¡Vamos! Tu Firefox está actualizado.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Tu Firefox está desactualizado.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Por motivos de seguridad, te recomendamos que actualices a la <a href="{url}">última y mejor versión</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Estás usando una versión desconocida de Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Por motivos de seguridad, te recomendamos que descargues la <a href="{url}">última y mejor versión</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Realizá tu próxima tarea<br />más rápido que nunca
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Mirá como las nuevas características de Firefox te ayudan a navegar de forma más rápida y eficiente.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Conocé más sobre <a href="{url}">la funcionalidad Nueva pestaña »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Conocé más sobre nuestro <a href="{url}">rediseño de la página de inicio »</a>
 
 
 ;Keep in touch
-Keep in touch
+Mantenete en contacto
 
 
 ;Keep it moving
-Keep it moving
+Mantenete en movimiento
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Descargá Firefox » <b>para Android</b>
 
 
 ;Keep it going
@@ -54,10 +54,10 @@ Keep it going
 
 
 ;Join Mozilla
-Join Mozilla
+Unite a Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+El Android Robot se reproduce del trabajo creado y <a href="%s">compartido por Google</a> y se usa de acuerdo a los términos descriptos en la <a href="%s">Licencia Creative Commons 3.0 Attribution</a>.
 
 
