Update text for headings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105726 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/zh-TW/whatsnew.lang
+++ b/zh-TW/whatsnew.lang
@@ -22,7 +22,7 @@
 
 
 ;Get to your next task<br/>faster than ever
-更快完成您的工作<br/>比以前更快完成
+讓您的工作<br/>比以前更快完成
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
