--- a/pt-BR/videos/video_fx13.lang
+++ b/pt-BR/videos/video_fx13.lang
@@ -1,42 +1,32 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-
+[O que há de novo no Firefox] Agora é mais fácil e rápido chegar onde você quer com o Firefox mais recente.
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-
+Com a Página Inicial renovada você pode acessar e navegar facilmente pelas suas opções de menu mais usadas.
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
-
+Como downloads, favoritos, histórico, complementos, sync e configurações.
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
-
+[Página Nova aba] Nós também adicionamos melhorias à sua página Nova aba.
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-
+Com a nova página Nova Aba você pode navegar facilmente pelos sites visitados recentemente e com mais frequência em um clique.
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-
+Para começar a usar a nova página Nova Aba, crie uma nova aba clicando no '+' no topo do navegador.
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-
+A página nova aba agora exibe miniaturas dos sites visitados recentemente e com mais frequência do seu histórico do Campo de Endereços Inteligente.
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
-
+Você pode personalizar a sua página Nova Aba arrastando as miniaturas para mudar a ordem.
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-
+Clique no alfinete para afixar o site no lugar, ou no notão 'X' para removê-lo.
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-
+Você também pode clicar no ícone 'grade' no topo direito da página para voltar para a página Nova Aba em branco.
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Baixe o Firefox mais recente e comece a usar esses novos rescursos hoje!
