--- a/pt-BR/whatsnew.lang
+++ b/pt-BR/whatsnew.lang
@@ -1,63 +1,47 @@
 # This is for the Whatsnew page: http://www-dev.allizom.org/firefox/13.0/whatsnew/
 
-
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
-
+Uau! O Firefox está atualizado.
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
-
+Seu Firefox está desatualizado.
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-
+Por razões de segurança, nós recomendamos que você atualize para a <a href="{url}">melhor e mais recente versão</a>.
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
-
+Você está usando uma versão desconhecida do Firefox.
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-
+Por razões de segurança, nós recomendamos que você baixe a <a href="{url}">melhor e mais recente versão</a>.
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
-
+Chegue até sua próxima tarefa<br/>mais rápido que nunca
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
-
+Voja como od novos recursos do Firefox ajudam você a navegar com mais velocidade e eficiência.
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
-
+Saiba mais sobre a <a href="{url}">página Nova Aba »</a>
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
-
+Saiba mais sobre nossa <a href="{url}">página inicial renovada »</a>
 
 ;Keep in touch
-Keep in touch
-
+Mantenha contato
 
 ;Keep it moving
-Keep it moving
-
+Mantenha em movimento
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
-
+Baixe o Fireofx » <b>para Android</b>
 
 ;Keep it going
-Keep it going
-
+Mantenha o entusiasmo
 
 ;Join Mozilla
-Join Mozilla
-
+Una-se à Mozilla
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-
+O robô Android foi reproduzido a partir de um trabalho criado e <a href="%s">compartilhado pelo Google</a> e usado de acordo com os termos descritos na <a href="%s">Licença Creative Commons 3.0 Atribuição</a>.
 
