Bug 760543 - [sv-SE] Translate Whats New page for Firefox 13 + video
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105728 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sv-SE/whatsnew.lang
+++ b/sv-SE/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hurra! Din Firefox är uppdaterad.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Din Firefox är inte uppdaterad.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Av säkerhetsskäl rekommenderar vi att du uppdaterar till den <a href="{url}">senaste och bästa versionen</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Du använder en okänd version av Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Av säkerhetsskäl rekommenderar vi att du hämtar den <a href="{url}">senaste och bästa versionen</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Uträtta saker<br/>snabbare än någonsin
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Se hur de nya funktionerna i Firefox hjälper dig att surfa snabbare och effektivare.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Läs mer om <a href="{url}">funktionen Ny flik »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Läs mer om <a href="{url}">den nya startsidan »</a>
 
 
 ;Keep in touch
-Keep in touch
+Håll kontakten
 
 
 ;Keep it moving
-Keep it moving
+Ha den med dig
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Hämta Firefox » <b>för Android</b>
 
 
 ;Keep it going
-Keep it going
+Hjälp till
 
 
 ;Join Mozilla
-Join Mozilla
+Gå med i Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Android-roboten är reproducerad från ett arbete skapat och <a href="%s">delat av Google</a> och används i enlighet med villkoren i licensen <a href="%s">Creative Commons 3.0 Attribution</a>.
 
 
