--- a/sv-SE/videos/video_fx13.lang
+++ b/sv-SE/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Vad är nytt i Firefox] Det är nu enklare och snabbare att göra det du vill med senaste Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Med den nya startsidan kan du nu enkelt komma åt och navigera bland de mest använda menyalternativen.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Som filhämtningar, bokmärken, historik, tillägg, sync och inställningar.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Ny flik-sidan] Vi har också gjort förbättringar i Ny flik-sidan.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Med Ny flik-sidan kan du nu med ett klick enkelt hitta till dina senaste och mest besökta sajter.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+För att börja använda Ny flik-sidan, öppna en ny flik genom att klicka på fliken ”+” i flikraden.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Ny flik-sidan visar nu miniatyrer av dina senast och mest besökta webbplatser från adresshistoriken.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Du kan anpassa Ny flik-sidan genom att flytta runt miniatyrerna.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Klicka på kartnålen för att låsa fast sajten, eller på ”X”-knappen för att ta bort en sajt.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Du kan även klicka på rutnätsikonen uppe till höger för att gå bakåt till en tom Ny flik-sida.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Hämta senaste Firefox och börja använd dessa nya funktioner idag!
