Bug 760478 - [br] Translate Whats New page for Firefox 13 + vido
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105730 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/br/snippets.lang
+++ b/br/snippets.lang
@@ -126,6 +126,5 @@ Herrek, herrek, herrek. <a %s>Un hizivadur pouezus zo bet evit handelv Android e
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-
+Firefox en deus keweriusterioù nevez evit tremen d'un eil trevell d'an egile herrekoc'h c'hoazh ! <a href="%">Sellit ouzh ar video evit gouzout hiroc'h.</a>
 
