--- a/br/videos/video_fx13.lang
+++ b/br/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Petra zo nevez e Firefox] Aesoc'h ha herrekoc'h eo bremañ evit mont d'al lec'h ma fell deoc'h gant handelv diwezhañ Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Aesoc'h eo gant ar bennbajenn nevez da dizhout dibarzhioù al lañserioù ar muiañ arveret.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Evel ar pellgargadurioù, ar sinedoù, ar roll istor, an askouezhioù, Sync hag an arventennoù.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Pajenn Ivinell Nevez] Gwellaet hon eus ivez ho pajenn Ivinell Nevez.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Gant ar bajenn Ivinell Nevez e c'hellit mont d'al lec'hiennoù gweladennet nevez zo pe ar re vuiañ gweladennet.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Evit kregiñ d'arverañ ar bajenn Ivinell Nevez, krouit un ivinell nevez en ur glikañ war an afell '+' e-krec'h ho merdeer.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Ar bajenn Ivinell Nevez a ziskouezo melvennoù eus al lec'hiennoù gweladennet nevez zo pe ar re vuiañ gweladennet war roll istor ar varrenn chomlec'h.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Gallout a rez personelaat ho pajenn Ivinell Nevez en ur sachañ war ar melvennoù evit kemmañ an urzh.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Klikit war ar spilhenn evit prennañ al lec'hienn war ar bajenn pe an afell 'X' evit lemel ul lec'hienn.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Gallout a rit ivez klikañ war an arlun 'kael' e-krec'h ar bajenn war an tu dehou evit mont d'un ivinell goullo.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Pellgargit an handelv diwezhañ eus Firefox diouzhtu ha krogit d'arverañ ar c'heweriusterioù nevez-mañ hiziv !
