--- a/br/whatsnew.lang
+++ b/br/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+You ! Hizivaet eo bet ho Firefox.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Diamzeret eo ho Firefox.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Evit abegoù a denn d'an diogelroez ez erbedomp deoc'h hizivaat ho merdeer gant an <a href="{url}">handelv diwezhañ</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Emaoc'h oc'h arverañ un handelv dianav eus Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Evit abegoù a denn d'an diogelroez ez erbedomp deoc'h pellgargañ an <a href="{url}">handelv diwezhañ</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Tremenit d'un eil trevell d'an egile herrekoc'h eget biskoazh
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Dizoloit penaos merdeiñ gant un doare herrekoc'h ha efedusoc'h gant ar c'heweriusterioù nevez eus Firefox.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Gouzout hiroc'h a-zivout <a href="{url}">ar c'heweriuster Ivinell Nevez »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Gouzout hiroc'h a-zivout hor <a href="{url}">pennbajenn nevez »</a>
 
 
 ;Keep in touch
-Keep in touch
+Chomomp e darempred
 
 
 ;Keep it moving
-Keep it moving
+Bezit heloc'h
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Ho pezet Firefox » <b>evit Android</b>
 
 
 ;Keep it going
-Keep it going
+Chomit kelaouet
 
 
 ;Join Mozilla
-Join Mozilla
+Kit davet Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Haneilet eo bet ar robot Android diouzh un oberenn krouet ha <a href="%s">rannet gant Google</a> dindan termenoù deskrivet e-barzh al <a href="%s">lañvaz Creative Commons 3.0</a>.
 
 
